[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Rust bindings for the VTE 3 library"
license = "MIT"
name = "vte-rs"
version = "0.3.0"

[dependencies]
bitflags = "1"
gdk-sys = { git = "https://github.com/gtk-rs/sys.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
gio = { git = "https://github.com/gtk-rs/gio.git" }
gio-sys = { git = "https://github.com/gtk-rs/sys.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys.git" }
gtk = { git = "https://github.com/gtk-rs/gtk.git" }
gtk-sys = { git = "https://github.com/gtk-rs/sys.git" }
libc = "0.2.66"
pango = { git = "https://github.com/gtk-rs/pango.git" }
vte-sys = { path="vte-sys-rs", version = "0.2.2" }

[lib]
name = "vte"

[features]
v0_40 = ["vte-sys/v0_40"]
v0_42 = ["v0_40", "vte-sys/v0_42"]
v0_44 = ["v0_42", "vte-sys/v0_44"]
v0_46 = ["v0_44", "vte-sys/v0_46"]
v0_48 = ["v0_46", "vte-sys/v0_48"]
